客户端优化

--- a/QtWinSocketClient/QtWinSocketClient.vcxproj.filters
+++ b/QtWinSocketClient/QtWinSocketClient.vcxproj.filters
@@ -77,4 +77,9 @@
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="constdef.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
