1. 服务端初始添加 2. 客户端适配优化

--- a/QtWinSocketClient/QtWinSocketClient.vcxproj.filters
+++ b/QtWinSocketClient/QtWinSocketClient.vcxproj.filters
@@ -78,7 +78,7 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="constdef.h">
+    <ClInclude Include="..\include\constdef.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
