--- a/QtWinSocketClient/QtWinSocketClient.vcxproj.filters
+++ b/QtWinSocketClient/QtWinSocketClient.vcxproj.filters
@@ -56,13 +56,22 @@
     <ClCompile Include="GeneratedFiles\Release\moc_tcpclient.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
-    <ClCompile Include="tcptask.cpp">
+    <ClCompile Include="tcprecvclient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug\moc_tcptask.cpp">
+    <ClCompile Include="GeneratedFiles\Debug\moc_tcprecvclient.cpp">
       <Filter>Generated Files\Debug</Filter>
     </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_tcptask.cpp">
+    <ClCompile Include="GeneratedFiles\Release\moc_tcprecvclient.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="tcpsendclient.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_tcpsendclient.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_tcpsendclient.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
   </ItemGroup>
@@ -73,7 +82,10 @@
     <CustomBuild Include="tcpclient.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
-    <CustomBuild Include="tcptask.h">
+    <CustomBuild Include="tcprecvclient.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="tcpsendclient.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
